@@ -3,6 +3,6 @@ EBUILD cld-meta-10.0.ebuild 6079 RMD160 8e44b93588d4e3f5022cd014e344811ce87fdc90
 EBUILD cld-meta-10.2-r1.ebuild 6598 RMD160 70dff715c5ad301a7429b409d1e469db727e211c SHA1 3448abaf0b545a1be9942d54eed0094b1f0cb060 SHA256 6efafa5697474599da3c85ae496229b6d7f53f9b2abfd7e07b2a28d28504beb8
 EBUILD cld-meta-10.3.91.ebuild 6045 RMD160 30c7c43f510bc1df1e25c8c4491773dac375f264 SHA1 ff2e9fb197a81b2d78f74eae42fc24eee8045b3f SHA256 01dc0493f2fc153f54ca80e542a1467593d16f243db50b836de024e6a76044e8
 EBUILD cld-meta-10.4-r1.ebuild 6438 RMD160 2536b4e88042bd691f9d306ea7e21fa3fe9c24a6 SHA1 f86dbdea89eac42d861032494655ad5d92dd0425 SHA256 41941b0dcdbbc4d9200d590b93901b16a29de55f889ffdecbc622a319cf81c01
-EBUILD cld-meta-10.5.83.ebuild 1060 RMD160 1900ae919b927eb05e9e69368a682226b7a8f177 SHA1 dad7c14c3b57e141188e61e167220dbb6bc2b7f8 SHA256 36846e1c1b3f4a41951be4eb26e9afe0006aca9b6bdca90989eb090e49b35539
-MISC ChangeLog 944 RMD160 a724b89d044e31a755756fcd7e305a56f1729f4a SHA1 451ab03dd89ab8bbccd148d4336f407db6745e6b SHA256 fd515751bcd00b9d416d204e71097c6b4da52caed9803c54d508eb81e7b503c4
+EBUILD cld-meta-10.5.83.ebuild 1435 RMD160 fd8d392ce5808528569b280d9b2c22cd153201ac SHA1 09d2b53a4f55f3a42a38d3e236f1e26faa8665c1 SHA256 96e06d64704fd7438cc9f3d32747fa4b25b2a699427c6dee263e4ae149037b4e
+MISC ChangeLog 1098 RMD160 2913f3b716acbcc3d9bd609abd951cbdcfe4f0dc SHA1 455132926914b56984ae34d8953b64c0fb848c67 SHA256 a1e37f25b081140a1cb3aa87e5f30634365947224f9c1fd6e224ac009dc16cae
 MISC metadata.xml 261 RMD160 2aceeb761944d521f163c4b6069c36bc75b0ee1c SHA1 ef324fde01725a0c12d658e689002edffe695b6c SHA256 8bf4a47c7586811fc0bf26d75abbf0f4bc7bb6a9ed501b34622c4d822de83591
