@@ -1,4 +1,5 @@
 EBUILD cldg-meta-10.3.91.ebuild 5147 RMD160 290f393f821721ba1517021bac26aed8d8226aca SHA1 8b419b9d3f8f4d900e23b64d6d022cccc9e8bf59 SHA256 98ec2521551e91a4f9ff3808dd2776a22b38456e88f55507d0a69cc8268f49bd
 EBUILD cldg-meta-10.4.ebuild 5760 RMD160 98ac2684e9f09f8c971eafe3ef26a42a82d1ee83 SHA1 03fad2f39bc755eb620347c5936341961c927809 SHA256 b1fb04cb0a142f9a70a2e9609458023fad1439cf309293ab0f186e19d7d91653
-MISC ChangeLog 1022 RMD160 247469d41c351ed7f0bec43f3e0472d15d35344f SHA1 c24fc6c14755d1640e21a3ed3cb6cbb087c30188 SHA256 4cae33862e9f737091c78c63c40046f3e00921b91a663be7593f7050b9faae91
+EBUILD cldg-meta-10.5.83.ebuild 1536 RMD160 e43c7bc2ce60550adcfeda88e477f4753c6c7cbd SHA1 bcafdd0c2bb4d47b910c1999f26e1fce1ca7eb95 SHA256 f41502fab78f942495c6b97d51699891a26edb4548f7a5941f71c68eba6bbc30
+MISC ChangeLog 1167 RMD160 c1bea88fcba8fa4d05425fe5d5509d9390bad35f SHA1 5f75cf5ef55f3f813be7ed8e064115ba21695d85 SHA256 32ddf244d0dea5d1909e9cac8b53f89f66d32d92c51fa08c9b48b6966dba4cc3
 MISC metadata.xml 263 RMD160 596dddaf55974cdaa7642643631b4e506681adde SHA1 56cba5a8dbf3977d7891ec138b75e8fe3eb6fadd SHA256 0a6e854923033ffffca2b1ce19e0b12ae33a4d6a372b2613e3ded5b750899526
