@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cld-meta-10.5.83.ebuild:
+  Added change version system after installing meta-package.
+
 *cld-meta-10.5.83 (07 Jun 2010)
 
   07 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
